Correções nos comandos sql